payment on mobile issues fixed

--- a/src/style/03-utilities/_textAlignment.scss
+++ b/src/style/03-utilities/_textAlignment.scss
@@ -3,6 +3,7 @@
 }
 
 @media screen and (min-width: 800px) {
+  .textCenterAlways,
   .textCenter {
     text-align: center !important;
 
