--- a/src/style/05-pages/_payments.scss
+++ b/src/style/05-pages/_payments.scss
@@ -45,7 +45,6 @@
   width: fit-content;
   margin: 0 auto 0.75rem;
   box-shadow: 0rem 0.125rem 0.25rem rgba($blueDark, 0.1);
-  width: 10rem;
 
   &.buttonMargin {
     margin-top: 1.5rem;
